# devoter

./: Cargo.toml  README.md  config.json  scanned_players.json
src/: config.rs  crypto.rs  main.rs  vote.rs
