[package]
name = "devoter"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
mimalloc = "0.1.48"
openssl = { version = "0.10.75", features = ["vendored"] }
rand = { version = "0.9.2", features = ["small_rng"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
